spring-boot-docker-GKE-course-20250508/manifest/service.yaml
#service:
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-helloworld-service  # 這裡是service的名稱
  labels:
    app: spring-boot-helloworld   # 這裡是service的label
spec: 
  selector:
    app: spring-boot-helloworld # 這裡要對應到pod的label
  ports:
    - port: 80          # 這裡是service的port
      targetPort: 8080  # 這裡要對應到containerPort
  type: LoadBalancer
